# Project-Chimera

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: architect.md  lead_architect.mdc
.github/workflows/: ci.yml  main.yml
delivery_challenge/data/: TRP Week 0 – Delivery Challenge 2 - Dataset - Delivery events.csv
research/: architecture_strategy.md
skills/: README.md  __init__.py  wallet.py
skills/__pycache__/: wallet.cpython-312.pyc.1976148692416
specs/: .meta.md  technical.md
tests/: test_audit.py  test_governance.py
tests/__pycache__/: test_governance.cpython-312-pytest-9.0.2.pyc.4972
