[project]
name = "project-chimera"
version = "0.1.0"
description = "Data Warehouse Audit and Delivery Challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "pandas>=2.2.0",
]

[tool.ruff]
# Enable strict linting
line-length = 88
select = ["E", "F", "I", "N"]

[tool.pyright]
# Professional-grade type checking
include = ["."]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
# Ensures pytest looks in the right place
testpaths = ["tests"]